src/styles/layout.css
body {
    background-color: #F7FDF5;
    color: #2C3E2E;
}

nav {
    height: 6vh;
    background: #FFFFFF;
    min-height: 54px;
    z-index: 10;
    border-bottom: 2px solid #5A9658;
}

.logo {
    display: flex;
    float: left;
    overflow: hidden;
}

.logo a {
    background-image: none;
}

.logo img {
    height: 5vh;
    margin-top: 4%;
    min-height: 43px;
    width: auto;
    padding-left: 3px;
    flex-wrap: wrap;
}

.nav-links {
    display: flex;
    list-style: none;
    width: 50%;
    height: 100%;
    justify-content: space-around;
    align-items: center;
    margin-left: auto;
    /*z-index: 10;*/
}

@media screen and (max-width: 900px) {
    nav {
        position: relative;
    }

    .hamburger {
        position: absolute;
        cursor: pointer;
        right: 0;
        z-index: 11;
        margin: 5px;
        width: 30px;
    }

    .hamburger:after,
    .hamburger:before,
    .hamburger div {
        background-color: #5A9658;
        border-radius: 3px;
        content: '';
        display: block;
        height: 5px;
        margin: 7px 0;
        transition: all .2s ease-in-out;
    }
    .hamburger:before {
        width: 25px;
        margin-left: 4px;
    }

    /*hover*/
    .hamburger:hover:before {
        background-color: #8dc73f;
        transition: all .5s ease-in-out;
        margin-left: 0;
    }
    .hamburger:hover:after {
        background-color: #8dc73f;
        transition: all .5s ease-in-out;
    }
    .hamburger:hover div {
        background-color: #8dc73f;
        transition: all .5s ease-in-out;
    }

    /*open*/
    .hamburger.open:before{
        transform: translateY(12px) rotate(135deg);
        margin-left: 0;
        width: 30px;
    }
    .hamburger.open:after {
        transform: translateY(-12px) rotate(-135deg);
    }
    .hamburger.open div {
        transform: scale(0);
    }

    .nav-links {
        position: fixed;
        background: #2C3E2E;
        height: 50vh;
        width: 100%;
        padding-top: 2vh;
        padding-bottom: 20%;
        flex-direction: column;
        clip-path: circle(0px at 50% -10%);
        -webkit-clip-path: circle(0px at 50% -10%);
        transition: all 1s ease-out;
        /*z-index: 10;*/
    }

    .nav-links.open {
        clip-path: circle(50vh at 50% -10%);
        -webkit-clip-path: circle(50vh at 50% -10%);
    }

    .nav-links a {
        opacity: 0;
        font-size: 25px;
    }

    .nav-links a:nth-child(1) {
        transition: all 0.5s ease 0.2s;
    }

    .nav-links a:nth-child(2) {
        transition: all 0.5s ease 0.45s;
    }

    .nav-links a:nth-child(3) {
        transition: all 0.5s ease 0.6s;
    }

    .nav-links a:nth-child(4) {
        transition: all 0.5s ease 0.75s;
    }

    .nav-links a:nth-child(5) {
        transition: all 0.5s ease 0.9s;
    }

    .nav-links a:nth-child(6) {
        transition: all 0.5s ease 1s;
    }
}

